collapsing navbar needs fixing, about me page is almost done

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -8,7 +8,7 @@
   padding: 50px;
   border-radius: 50px;
   height: 300px;
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.25);
 }
 
 h1 {
