--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ code {
   margin-left: 20px;
   margin-right: 20px;
   height: 300px;
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.25);
 }
 
 .a-card-info {
